<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:contentDescription="@string/tab_01"
            android:src="@drawable/baseline_all_inclusive_24"
            app:tint="@color/white" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:contentDescription="@string/tab_02"
            android:src="@drawable/baseline_emoji_happy_24" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:contentDescription="@string/tab_03"
            android:src="@drawable/baseline_sunny_24" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/cabin"
        android:text="@string/title"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/message"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:layout_width="125dp"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="@color/purple_500"
            android:elevation="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_generate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/cabin"
        android:paddingHorizontal="16dp"
        android:text="@string/button_generate"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:cornerRadius="4dp" />

</RelativeLayout>