<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".UserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cabin"
        android:text="@string/title_save_screen"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/cabin"
        android:text="@string/edit_save_screen"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/pink_500"
        android:fontFamily="@font/cabin"
        android:paddingHorizontal="16dp"
        android:text="@string/button_save"
        android:textAllCaps="true"
        app:cornerRadius="4dp" />

</RelativeLayout>